bug fix in client-deployment

--- a/client-deployment.yaml
+++ b/client-deployment.yaml
@@ -11,8 +11,9 @@ spec:
     metadata:
       labels:
         component: web
-    spec: containers:
-      - name: client
-        image: samikmalhotra/multi-client
-        ports: 
-          - containerPort: 3000
+    spec: 
+      containers:
+        - name: client
+          image: samikmalhotra/multi-client
+          ports: 
+            - containerPort: 3000
